<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/add_product_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        >
        <TextView
            android:id="@+id/add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingHorizontal="10dp"
            />
        <EditText
            android:id="@+id/prod_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="10dp"
            />
        <EditText
            android:id="@+id/prod_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:paddingHorizontal="10dp"
            />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:hint="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:hint="@string/cancel"
            app:layout_constraintStart_toEndOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_products"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_section">

        <LinearLayout
            android:id="@+id/products_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>